--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -16,6 +16,18 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {
+    zoom: 1
+}
+
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
 /* ------------------------------------- */
 /* REUSABLE COMPONENTS */
 /* ---------------------------------------- */
@@ -38,6 +50,8 @@ header {
     background-size: cover;
     background-position: center;
     height: 100vh;
+    background-attachment: fixed;
+
 }
 
 
@@ -115,6 +129,24 @@ h3 {
 
 }
 
+/* ------------------------------------- */
+/* LINKS */
+/* ---------------------------------------- */
+a:link,
+a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 5px;
+    transition: border 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+    border: 0;
+    color: #555;
+}
+
 
 /* ------------------------------------- */
 /* BUTTONS */
@@ -150,6 +182,8 @@ h3 {
     background-color: rgba(230, 126, 34, 0.8);
     color: rgb(255, 235, 217);
 }
+
+
 
 /* ------------------------------------------ */
 /* NAVBAR */
@@ -238,4 +272,128 @@ h3 {
 .meal-photo img:hover {
     opacity: 1;
     transform: scale(1.03);
+}
+
+/* ------------------------------------------ */
+/* -----HOW IT WORKS-------- */
+/* -------------------------------------- */
+
+.section-steps {
+    background-color: rgb(221, 221, 221);
+}
+
+.steps-box:first-child {
+    text-align: right;
+    padding-right: 3%;
+    margin-top: 30px;
+}
+
+.steps-box:last-child {
+    padding-left: 3%;
+    margin-top: 70px;
+}
+
+.app-screen {
+    width: 40%;
+}
+
+.works-step {
+    margin-bottom: 40px;
+
+}
+
+.works-step:last-of-type {
+    margin-bottom: 120px;
+}
+
+.works-step div {
+    color: rgb(230, 126, 34);
+    border: 1px solid rgb(230, 126, 34, 1);
+    border-radius: 50%;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px;
+}
+
+.steps-box a {
+    border: 0;
+}
+
+.btn-app {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
+
+}
+
+/* ------------------------------------------ */
+/* -----CITIES------- */
+/* -------------------------------------- */
+.city-img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
+.city-feature ion-icon {
+    display: inline-block;
+    font-size: 120%;
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -4px;
+    margin-right: 4px;
+    width: 30px;
+    text-align: center;
+    color: rgb(230, 126, 34);
+}
+
+/* ------------------------------------------ */
+/* TESTIMONIALS */
+/* -------------------------------------- */
+
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: rgb(233, 233, 233);
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201c";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+}
+
+cite {
+
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
