--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -129,6 +129,22 @@ h3 {
 
 }
 
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
+    margin-right: 10px;
+
+    /* icon align tricks */
+
+    vertical-align: middle;
+    line-height: 120%;
+    margin-top: -5px;
+}
+
+
 /* ------------------------------------- */
 /* LINKS */
 /* ---------------------------------------- */
@@ -152,19 +168,22 @@ a:active {
 /* BUTTONS */
 /* ---------------------------------------- */
 
-.btn {
+.btn:link,
+.btn:visited {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
     text-decoration: none;
-    border-radius: 200px;
+    border-radius: 50px;
     color: rgb(211, 211, 211);
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
 .btn-full {
     background-color: rgba(230, 126, 34, 0.8);
+    color: #fff;
     border: 1px solid rgba(230, 126, 34, 1);
+    margin-right: 15px;
 }
 
 .btn-ghost {
@@ -396,4 +415,61 @@ cite img {
     border-radius: 50%;
     margin-right: 10px;
     vertical-align: middle;
+}
+
+/* ------------------------------------------ */
+/* PLANS */
+/* -------------------------------------- */
+.section-plans {
+    background: rgb(221, 221, 221);
+
+}
+
+.plan-box {
+    background-color: #fff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+
+}
+
+.plan-box div {
+    padding: 15px;
+    border-bottom: 1px solid rgb(219, 219, 219);
+    box-shadow: 2px 2px 2px #efefef;
+}
+
+.plan-box div:first-child {
+    background-color: rgb(245, 245, 245);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.plan-box div:last-child {
+    text-align: center;
+    border: 0;
+}
+
+.plan-box span {
+    font-weight: 300;
+    font-size: 30%;
+}
+
+.plan-price {
+    font-size: 300%;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: rgb(230, 126, 34);
+}
+
+.plan-price-meal {
+    font-size: 80%;
+}
+
+.plan-box ul {
+    list-style: none;
+}
+
+.plan-box li {
+    padding: 5px 0;
 }
