--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -4,6 +4,7 @@
 * {
     padding: 0;
     margin: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 
 }
@@ -46,6 +47,7 @@ section {
 /* ---------------------------------------- */
 
 header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -61,6 +63,7 @@ header {
     width: 1140px;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
@@ -152,8 +155,9 @@ a:link,
 a:visited {
     color: #e67e22;
     text-decoration: none;
-    border-bottom: 1px solid #e67e22;
+    /* border-bottom: 1px solid #e67e22; */
     padding-bottom: 5px;
+    -webkit-transition: border 0.2s, color 0.2s;
     transition: border 0.2s, color 0.2s;
 }
 
@@ -177,6 +181,7 @@ input[type=submit] {
     text-decoration: none;
     border-radius: 50px;
     color: rgb(211, 211, 211);
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -198,6 +203,8 @@ input[type=submit] {
 input[type=submit]:hover,
 input[type=submit]:active {
     background-color: rgb(180, 84, 0);
+    border: 1px solid rgba(230, 126, 34, 1);
+
 }
 
 .btn-ghost:hover,
@@ -208,23 +215,25 @@ input[type=submit]:active {
 
 
 
-/* ------------------------------------------ */
+/* -------------------------------------- */
 /* NAVBAR */
 /* -------------------------------------- */
+
+
 .logo {
     float: left;
     width: auto;
-    height: 100px;
-    margin-top: 15px;
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
 }
 
 .main-nav {
     float: right;
     list-style: none;
-    margin-top: 45px;
-
-
+    margin-top: 40px;
+    font-size: 80%;
 }
 
 .main-nav li {
@@ -239,12 +248,48 @@ input[type=submit]:active {
     text-transform: uppercase;
     font-size: 90%;
     padding-bottom: 10px;
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
 
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid rgba(230, 126, 34, 1);
+}
+
+/* STICKY */
+.sticky .main-nav {
+    margin-top: 25px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    color: #555;
+    padding: 16px 0;
+}
+
+.sticky .logo {
+    display: none;
+
+}
+
+.sticky .logo-black {
+    display: block;
+    float: left;
+    width: auto;
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.95);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
 }
 
 /* ------------------------------------------ */
@@ -288,12 +333,17 @@ input[type=submit]:active {
     opacity: 0.7;
     width: 100%;
     height: auto;
+    -webkit-transform: scale(1.15);
     transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover {
     opacity: 1;
+    -webkit-transform: scale(1.03);
     transform: scale(1.03);
 }
 
@@ -379,11 +429,16 @@ input[type=submit]:active {
     color: rgb(230, 126, 34);
 }
 
+.city-feature a {
+    border-bottom: 1px solid #e67e22;
+}
+
 /* ------------------------------------------ */
 /* TESTIMONIALS */
 /* -------------------------------------- */
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
     background-size: cover;
     color: rgb(233, 233, 233);
@@ -440,6 +495,7 @@ cite img {
 .plan-box div {
     padding: 15px;
     border-bottom: 1px solid rgb(219, 219, 219);
+    -webkit-box-shadow: 2px 2px 2px #efefef;
     box-shadow: 2px 2px 2px #efefef;
 }
 
@@ -574,6 +630,7 @@ footer {
 
 .github,
 .linkedin {
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
