--- a/resourses/css/queries.css
+++ b/resourses/css/queries.css
@@ -83,7 +83,7 @@
 
     .row,
     .hero-text-box {
-        padding 0 4%;
+        padding: 0 4%;
     }
 
     .col {
@@ -97,7 +97,9 @@
 
     .mobile-nav-icon {
         display: inline-block;
+        margin-top: 20px;
     }
+
 
     .main-nav {
         float: left;
@@ -113,7 +115,7 @@
     .main-nav li a:visited {
         display: block;
         border: 0;
-        padding: 10px 0;
+        padding: 8px 0;
         font-size: 100%;
     }
 
@@ -128,10 +130,10 @@
     }
 
     .sticky .mobile-nav-icon {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 
-    .sticky .mobile-nav-icon i {
+    .sticky .mobile-nav-icon ion-icon {
         color: #555;
     }
 
