--- a/resourses/css/queries.css
+++ b/resourses/css/queries.css
@@ -66,7 +66,7 @@
     }
 
     .contact-form {
-        width: 80%;
+        width: 90%;
     }
 
 }
@@ -176,6 +176,29 @@
     .works-step:last-of-type {
         margin-bottom: 20px;
     }
+
+    .map-box {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .map {
+        width: 100%;
+        height: 300px;
+        z-index: 0;
+        position: relative;
+    }
+
+    .form-box {
+
+        height: auto;
+        width: 100%;
+        position: relative;
+        padding: 30px 0;
+
+    }
+
 
 }
 
