--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -578,7 +578,7 @@ cite img {
 
 
 .contact-form {
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -598,6 +598,29 @@ input[type=checkbox] {
 
 *:focus {
     outline: none;
+}
+
+.map-box {
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+
+.map {
+    width: 100%;
+    height: 500px;
+    z-index: 0;
+    position: relative;
+}
+
+.form-box {
+    top: 0;
+    right: 0;
+    height: 500px;
+    width: 50%;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.8);
+    z-index: 10;
 }
 
 /* ------------------------------------------ */
