--- a/public/stylesheets/queries.css
+++ b/public/stylesheets/queries.css
@@ -207,6 +207,39 @@
         padding: 25px 0;
     }
 
+    .logo {
+        height: 60px;
+    }
+
+    .hero-text-box h1 {
+        font-size: 24px;
+    }
+
+    .hero-text-box a {
+        padding: 8px 22px !important;
+        margin-bottom: 5px;
+    }
+
+    .sticky .mobile-nav-icon i {
+        color: #333;
+    }
+
+    .btn-app {
+        margin-top: 10px;
+        margin-bottom: 0;
+        width: 130px;
+        height: 40px;
+    }
+
+    .btn-full {
+        color: #f1f1f1 !important;
+    }
+
+    .btn-ghost {
+        color: #333333 !important;
+        background: rgba(218, 218, 218, 0.5);
+    }
+
     .contact-form {
         width: 100%;
     }
